# bug-finder-tool

./: --rules-dir.yaml  __init__.py  action.yml  custom_rules.yaml  depscan.py  iac_scanner.py  main_advanced.py  ml_detector.py  parallel_scanner.py  pyproject.toml  rules_engine.py  scanner.py  secrets.py  taint_tracker.py
.github/workflows/: bugfinder.yml  codeql.yml  publish.yml
