[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugfinder-rahulsahuindia"
version = "0.1.0"
description = "Advanced Bug Finder Tool – Automatically detect secrets, vulnerabilities, and code issues"
readme = "README.md"
authors = [
    {name = "Rahul Sahu", email = "rahulsahuonly@gmail.com"}
]
maintainers = [
    {name = "Rahul Sahu", email = "rahulsahuonly@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
keywords = ["security", "bug-finder", "secrets-detection", "vulnerability-scanner", "static-analysis"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "PyGithub>=2.1.1",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]
ml = ["transformers", "torch"]

[project.urls]
Homepage = "https://github.com/rahulsahuindia/bugfinder"
Repository = "https://github.com/rahulsahuindia/bugfinder.git"
Documentation = "https://github.com/rahulsahuindia/bugfinder#readme"
BugTracker = "https://github.com/rahulsahuindia/bugfinder/issues"

[project.scripts]
bugfinder = "bugfinder.main:main"

[tool.setuptools.packages.find]
include = ["bugfinder*"]
